# glidefs

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHECKPOINT.md  CITATION.cff  CLAUDE.md  Dockerfile  Dockerfile.multiarch  GLIDEv2.md  README-action.md  README.md  SCORED_COMPARISON.md  SECURITY.md  ZEROFS_COMPARISON.md  action.yml  install.sh
.claude/: settings.local.json
.claude/skills/architecture-doc/: SKILL.md
.github/: .dependabot.yml  .pjdfstest-9p-exclude
.github/workflows/: cross-compile.yml  docker.yml  fuzz.yml  multi-node-test.yml  release-pgo.yml  rust.yml  zfs-test.yml
bench/: Cargo.toml
bench/src/: benchmark.rs  formatter.rs  main.rs  runner.rs
bench/src/benchmarks/: data_modifications.rs  directory_traversal.rs  empty_dirs.rs  empty_files.rs  file_deletion.rs  file_moves.rs  metadata_ops.rs  mod.rs  random_reads.rs  sequential_writes.rs  single_file_append.rs
documentation/: next.config.mjs
documentation/src/app/: layout.tsx  page.mdx
documentation/src/app/9p-access/: page.mdx
documentation/src/app/advanced-use-cases/: page.mdx
documentation/src/app/checkpoints/: page.mdx
documentation/src/app/durability/: page.mdx
documentation/src/app/nbd-devices/: page.mdx
documentation/src/app/nfs-access/: page.mdx
documentation/src/app/quickstart/: page.mdx
documentation/src/app/troubleshooting/: page.mdx
documentation/src/components/: Navigation.tsx
examples/: workflow-database-testing.yml  workflow-persistent-cache.yml  workflow-shared-artifacts.yml
glidefs/: Cargo.toml
glidefs/benches/: flush_latency.rs  workloads.rs
glidefs/fuzz/: Cargo.toml
glidefs/fuzz/fuzz_targets/: fuzz_nbd_client_flags.rs  fuzz_nbd_option_header.rs  fuzz_nbd_request.rs  fuzz_protocol_sequence.rs
glidefs/loom-tests/: Cargo.toml
glidefs/loom-tests/src/: lib.rs
glidefs/src/: bucket_identity.rs  config.rs  key_management.rs  lib.rs  main.rs  parse_object_store.rs  storage_compatibility.rs  task.rs
glidefs/src/cli/: mod.rs  server.rs
glidefs/src/nbd/: api.rs  block_store.rs  handler.rs  lease.rs  metrics.rs  mod.rs  router.rs  server.rs  state.rs  sync.rs  write_cache.rs
glidefs/tests/integration/: crash_recovery.rs  failure_injection.rs  lease_fencing.rs  live_migration.rs  mod.rs  property_tests.rs  wake_any_node.rs
scripts/: diagnose-mixed-perf.sh  setup-glidefs.sh  setup-zerofs.sh
zerofs/: ARCHITECTURE.md  Cargo.toml  build.rs
zerofs/.cargo/: config.toml
zerofs/benches/: flush_latency.rs  workloads.rs
zerofs/fuzz/: Cargo.toml
zerofs/fuzz/fuzz_targets/: fuzz_nbd_client_flags.rs  fuzz_nbd_option_header.rs  fuzz_nbd_request.rs  fuzz_protocol_sequence.rs
zerofs/loom-tests/: Cargo.toml
zerofs/loom-tests/src/: lib.rs
zerofs/proto/: admin.proto
zerofs/src/: block_transformer.rs  bucket_identity.rs  checkpoint_manager.rs  config.rs  db.rs  key_management.rs  lib.rs  main.rs  nfs.rs  posix_tests.rs  storage_compatibility.rs
zerofs/src/cli/: checkpoint.rs  compactor.rs  debug.rs  flush.rs  lease.rs  mod.rs  password.rs  server.rs
zerofs/src/fs/: errors.rs  flush_coordinator.rs  gc.rs  key_codec.rs  lease.rs  lock_manager.rs  mod.rs  stats.rs
zerofs/src/fs/store/: chunk.rs  directory.rs  inode.rs  tombstone.rs
zerofs/src/nbd/: api.rs  block_store.rs  error.rs  handler.rs  lease.rs  metrics.rs  mod.rs  protocol.rs  router.rs  server.rs  write_cache.rs
zerofs/src/ninep/: handler.rs
zerofs/src/rpc/: client.rs  convert.rs  server.rs
zerofs/tests/: integration_lease.rs
zerofs/tests/failpoints/: mod.rs
zerofs/tests/integration/: crash_recovery.rs  failure_injection.rs  lease_fencing.rs  live_migration.rs  mod.rs  property_tests.rs  wake_any_node.rs
