[package]
name = "glidefs"
version = "1.0.1"
edition = "2024"
description = "High-performance NBD block storage backed by S3 for microVM storage"
license = "AGPL-3.0"
repository = "https://github.com/paraglidehq/GlideFS"
homepage = "https://www.glidefs.net"
documentation = "https://www.glidefs.net"
readme = "../README.md"
keywords = ["nbd", "s3", "block-storage", "microvm", "storage"]
categories = ["filesystem", "network-programming"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16

[features]
default = []
tokio-console = ["dep:console-subscriber"]
# Enable test utilities (skip_recovery_for_test, etc.) for integration tests
test-utils = []
# Expose protocol types for fuzzing
fuzz = []

[dependencies]
console-subscriber = { version = "0.5", optional = true }
mimalloc = { version = "0.1", features = ["v3"] }
tokio = { version = "1.49", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec"] }
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
object_store = { version = "0.12.4", features = ["aws", "azure", "gcp"] }
bytes = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rand = "0.8"
futures = "0.3"
chacha20poly1305 = "0.10"
anyhow = "1.0"
argon2 = "0.5"
url = "2.5"
deku = "0.20"
thiserror = "2.0"
libc = "0.2"
uuid = { version = "1.17", features = ["v4"] }
toml = "0.9"
shellexpand = "3.1"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"

[dev-dependencies]
tempfile = "3.21"
futures = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[lints.rust]
# Allow loom cfg flag (standard pattern for loom concurrency testing)
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[[bench]]
name = "flush_latency"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "workloads"
harness = false
required-features = ["test-utils"]

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
required-features = ["test-utils"]

