[package]
name = "zerofs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
deku = "0.20"

[dependencies.zerofs]
path = ".."
features = ["fuzz"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_nbd_client_flags"
path = "fuzz_targets/fuzz_nbd_client_flags.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_nbd_option_header"
path = "fuzz_targets/fuzz_nbd_option_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_nbd_request"
path = "fuzz_targets/fuzz_nbd_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_protocol_sequence"
path = "fuzz_targets/fuzz_protocol_sequence.rs"
test = false
doc = false
bench = false
